--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -3,6 +3,20 @@ body {
 }
 
 .yellow {
-    background-color: 
+    background-color: #EAC926;
 }
-
+.blue {
+    background-color: #03264C;
+}
+.lightblue {
+    background-color: #1259c3;
+}
+.darkGray {
+    background-color: #666;
+}
+.lightGray {
+    background-color: #ebebeb;
+}
+.green {
+    background-color: #39b54a;
+}
